# BYO-Load-Balancer

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  byolb.config
include/: config.h  config_file.h  connection.h  env.h  health_check.h  logging.h  networking.h  queue.h  round_robin.h  server.h  target_group.h  threads.h  utils.h
scripts/: clean.sh  docker_build.sh  docker_run.sh  run.sh
src/: CMakeLists.txt  _scratchpad  config_file.c  connection.c  env.c  health_check.c  logging.c  main.c  networking.c  queue.c  round_robin.c  server.c  target_group.c  threads.c  utils.c
tests/backend/: basicServer.js  package.json  server.js  serverA.js  serverB.js  serverC.js  serverD.js  serverE.js
tests/docker/: byolb.config  docker-compose.yaml
tests/echo/: package.json  setup.sh
tests/local/: package-lock.json  package.json
